--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # File that list contributors to the simple shell project.
- Caleb Nyong
+ Chalie Lijalem Yirsaw
  <br><br>
-Matthew Lawrence
+ Yunus Omomoh
